--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,47 @@
-node_modules
-# Keep environment variables out of version control
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-/generated/prisma
+# Build outputs (except what we need)
+/dist
+/build
 
-/lib/generated/prisma
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-/lib/generated/prisma
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
 
-/lib/generated/prisma
+# nyc test coverage
+.nyc_output
 
-/lib/generated/prisma
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-/lib/generated/prisma
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-/lib/generated/prisma
+# Prisma (but NOT the generated client)
+/prisma/migrations/
