--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "prisma generate && prisma db push",
-    "prisma:generate": "prisma generate",
-    "prisma:push": "prisma db push"
+    "build": "npx prisma generate && npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
